# marketplace_django

./: .env.example  .gitignore  Dockerfile  Makefile  pyproject.toml
core/api/: filters.py  schemas.py  urls.py
core/api/v1/: urls.py
core/api/v1/customers/: handlers.py  schemas.py
core/api/v1/products/: filters.py  handlers.py  schemas.py
core/api/v1/reviews/: handlers.py  schemas.py
core/apps/common/: enums.py  exceptions.py  models.py
core/apps/common/clients/: elasticsearch.py
core/apps/customers/: admin.py  apps.py  entities.py  models.py
core/apps/customers/exceptions/: code.py  customers.py
core/apps/customers/migrations/: 0001_initial.py  0002_alter_customer_phone.py  0003_alter_customer_phone_alter_customer_token.py
core/apps/customers/services/: auth.py  codes.py  customer.py  customers.py  sender.py
core/apps/products/: admin.py  apps.py
core/apps/products/entities/: products.py  reviews.py
core/apps/products/exceptions/: products.py  reviews.py
core/apps/products/filters/: products.py
core/apps/products/management/commands/: upsert_product_search.py
core/apps/products/migrations/: 0001_initial.py  0002_productreview.py
core/apps/products/models/: __init__.py  products.py  reviews.py
core/apps/products/services/: products.py  reviews.py  search.py
core/project/: asgi.py  containers.py  middlewares.py  urls.py  wsgi.py
core/project/settings/: main.py
docker_compose/: app.yaml  entrypoint.sh  monitoring.yaml  storages.yaml
tests/factories/: products.py
tests/services/: conftest.py  test_products.py
(+2 files in other folders)
