[tool.poetry]
name = "marketplace"
version = "0.1.0"
description = ""
authors = ["maksim <knyazev.maksim2852@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
django-environ = "^0.12.0"
psycopg2-binary = "^2.9.10"
django-ninja = "^1.3.0"
punq = "^0.7.0"


[tool.poetry.group.dev.dependencies]
faker = "^33.3.1"
pytest = "^8.3.4"
pytest-django = "^4.9.0"
factory-boy = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.project.settings.local"